<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.predsim.ui.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.predsim.ui.fragments.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboardFragment_to_forecastFragment"
            app:destination="@id/forecastFragment" />
    </fragment>

    <fragment
        android:id="@+id/forecastFragment"
        android:name="com.example.predsim.ui.fragments.ForecastFragment"
        android:label="@string/forecasts"
        tools:layout="@layout/fragment_forecast" />

    <fragment
        android:id="@+id/reportsFragment"
        android:name="com.example.predsim.ui.fragments.ReportsFragment"
        android:label="@string/reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.example.predsim.ui.fragments.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/helpFragment"
        android:name="com.example.predsim.ui.fragments.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.predsim.ui.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
